--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "posttest": "npm run kill:test",
     "test-coverage": "jest -i --verbose --forceExit --coverage",
     "debug": "nodemon .",
+    "start-gendoc": "node swagger.js",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
   },
   "devDependencies": {
@@ -44,6 +45,8 @@
     "sequelize-cli": "6.2.0",
     "sequelize-jest-helpers": "^1.0.2",
     "supertest": "4.0.2",
+    "swagger-autogen": "^2.22.0",
+    "swagger-ui-express": "^4.1.4",
     "wait-on": "^6.0.1"
   }
 }
